# MegaCoocookExcel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: AI_CONTEXT.md  ARCHITECTURE.md  Chat Zusammenfassung 22.07.26.docx  Chat Zusammenfassung 24.07.26.docx  MEGACOOCOOKEXCEL_COMPLETE_HANDBOOK.md  MEGACOOCOOKEXCEL_DEVELOPER_HANDBOOK.md  SPRINT_3_3.md  SPRINT_3_4.md  SPRINT_3_5.md  SPRINT_3_5A.md  SPRINT_3_6.md  SPRINT_3_7.md  SPRINT_3_8.md  SPRINT_4R.md  Sprint_5_Dokumentation.md  sprint_5.1.md
docs/decisions/: ADR-001-coocook-source-of-truth.md  ADR-002-json-as-master-database.md  ADR-003-no-framework-policy.md  ADR-004-dashboard-vanilla-js.md  ADR-005-supermarket-category-system.md
docs/health/: CHANGELOG.md  CODE_QUALITY.md  PROJECT_HEALTH.md  RELEASE_CHECKLIST.md  ROADMAP.md  TECHNICAL_DEBT.md
docs/health/audits/: AUDIT_2026-07-22.md
src/data/: articles.json
src/megacoocookexcel/: __init__.py  _init_.py  _main_.py  cli.py  models.py
src/megacoocookexcel/config/: articles.json
src/megacoocookexcel/dashboard/: __init__.py  api.py  bridge.py  launcher.py
src/megacoocookexcel/importer/: __init__.py  article_importer.py  article_repository.py
src/megacoocookexcel/parser/: __init__.py  _init_.py  base.py  cleaner.py  column_parser.py  extractor.py  mapper.py  reader.py
tests/: test_column_parser.py  test_mapper.py  test_models.py  test_reader.py
web/dashboard/: index.html
web/dashboard/css/: app.css
web/dashboard/js/: app.js  dashboard_api.js
