[project]
name = "MegaCoocookExcel"
version = "0.1.0"
description = "Convert Coocook shopping list PDFs into structured Excel workbooks."
authors = [
    { name = "Johans & ChatGPT" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pdfplumber>=0.11",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "rich>=14.0",
    "typer>=0.16"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2"
]