[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MegaCoocookExcel"
version = "0.1.0"
description = "Convert Coocook shopping list PDFs into structured Excel workbooks."

authors = [
    { name = "Johans & ChatGPT" }
]

readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

keywords = [
    "pdf",
    "excel",
    "shopping",
    "camp",
    "coocook"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "pdfplumber>=0.11",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "rich>=14.0",
    "typer>=0.16"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2"
]

[project.urls]
Homepage = "https://github.com/<DEIN_GITHUB_NAME>/MegaCoocookExcel"
Issues = "https://github.com/<DEIN_GITHUB_NAME>/MegaCoocookExcel/issues"