[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megacoocookexcel"
version = "0.4.0"
description = "Importiert Coocook-Einkaufslisten und verwaltet Artikel über ein Web-Dashboard."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "MegaCoocookExcel" }
]

dependencies = [
    "pdfplumber>=0.11.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",

    "typer>=0.12.0",
    "rich>=13.7.0",

    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.8.0",
    "ruff>=0.7.0"
]

[project.scripts]
megacoocookexcel = "megacoocookexcel.__main__:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "megacoocookexcel*"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]